Closed
Bug 1088637
Opened 11 years ago
Closed 10 years ago
Unnecessary vertical scrollbar appears when I move the mouse pointer over icon while PanelUI panel is animating
Categories
(Core :: XUL, defect)
Tracking
()
VERIFIED
FIXED
mozilla43
People
(Reporter: alice0775, Assigned: Gijs)
References
Details
(Keywords: polish, regression, reproducible)
Attachments
(4 files)
|
28.72 KB,
image/png
|
Details | |
|
16.88 KB,
image/png
|
Details | |
|
40 bytes,
text/x-review-board-request
|
enndeakin
:
review+
ritu
:
approval-mozilla-aurora+
ritu
:
approval-mozilla-beta+
|
Details |
|
98.50 KB,
image/png
|
Details |
Steps To Reproduce:
1. Click Hamburger button
2. Move the mouse cursor over icon while PanelUI panel is animating.
(In other words, move mouse pointer to the downwards immediately after clicking the Hamburger button)
Actual Results:
Animation stops. And Unnecessary vertical scrollbar appears
Expected Results:
No vertical scrollbar
| Reporter | ||
Updated•11 years ago
|
Summary: Unnecessary vertical scrollbar appears when I Vertical scrollbar appears when I move the mouse cursor over icon while PanelUI panel is animating → Unnecessary vertical scrollbar appears when I move the mouse pointer over icon while PanelUI panel is animating
| Assignee | ||
Comment 1•11 years ago
|
||
Is this a regression? And/or does it reproduce on current nightly?
Flags: needinfo?(alice0775)
| Reporter | ||
Comment 2•11 years ago
|
||
(In reply to :Gijs Kruitbosch from comment #1)
> Is this a regression? And/or does it reproduce on current nightly?
Yes regression, because It does not happens on build of 2013/11/18 (Australis marge day)
Yes, It is reproducible on Latest Nightly(2014-10/28)
Flags: needinfo?(alice0775)
| Reporter | ||
Comment 3•11 years ago
|
||
Regression window(m-i)
Good:
https://hg.mozilla.org/integration/mozilla-inbound/rev/f19ca5123d6a
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:33.0) Gecko/20100101 Firefox/33.0 ID:20140616112714
Bad:
https://hg.mozilla.org/integration/mozilla-inbound/rev/9e49b9b55cbb
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:33.0) Gecko/20100101 Firefox/33.0 ID:20140616114414
Pushlog:
Triggered by: Bug 994117
Blocks: 994117
Keywords: regression
| Reporter | ||
Updated•11 years ago
|
Component: Toolbars and Customization → XP Toolkit/Widgets: XUL
Product: Firefox → Core
| Reporter | ||
Comment 4•11 years ago
|
||
Comment 10•11 years ago
|
||
It can be even worse in some cases (for example when you know you need to click on an image in the bottom-left corner).
Comment 11•11 years ago
|
||
Looks like this bug has been forgotten about. Bump :)
The bug is very easy to reproduce and it happens very frequently, even when you're not attempting to reproduce it.
Keywords: reproducible
| Assignee | ||
Comment 13•10 years ago
|
||
Bug 1088637 - check we get the right transition event, r?Enn
Attachment #8648704 -
Flags: review?(enndeakin)
| Assignee | ||
Comment 14•10 years ago
|
||
Don't know why I didn't see this immediately after the regression window was posted, but here we are.
Assignee: nobody → gijskruitbosch+bugs
Status: NEW → ASSIGNED
Comment 15•10 years ago
|
||
Comment on attachment 8648704 [details]
MozReview Request: Bug 1088637 - check we get the right transition event, r?Enn
I don't think aEvent->GetTarget() can fail, and the null-check of eventTarget is redundant with SameCOMIdentity.
Attachment #8648704 -
Flags: review?(enndeakin) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox43:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
| Assignee | ||
Comment 18•10 years ago
|
||
Alice and/or Johan, can you verify this is now fixed? I'm hoping to uplift to 41 and 42, and independent verification would help. Thanks!
Flags: needinfo?(johan.charlez)
Flags: needinfo?(alice0775)
| Reporter | ||
Comment 19•10 years ago
|
||
I can verify this was fixed on latest Nightly43.0a1 (with disabled e10s and enabled e10s).
https://hg.mozilla.org/mozilla-central/rev/90d9b7c391d38ae118865bd87b5d011feee6dded
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0 ID:20150818030209
Flags: needinfo?(alice0775)
| Assignee | ||
Comment 20•10 years ago
|
||
(In reply to Alice0775 White from comment #19)
> I can verify this was fixed on latest Nightly43.0a1 (with disabled e10s and
> enabled e10s).
>
> https://hg.mozilla.org/mozilla-central/rev/
> 90d9b7c391d38ae118865bd87b5d011feee6dded
> Mozilla/5.0 (Windows NT 6.1; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0
> ID:20150818030209
Excellent, thanks!
Status: RESOLVED → VERIFIED
Flags: needinfo?(johan.charlez)
| Assignee | ||
Comment 21•10 years ago
|
||
Comment on attachment 8648704 [details]
MozReview Request: Bug 1088637 - check we get the right transition event, r?Enn
Approval Request Comment
[Feature/regressing bug #]: bug 994117
[User impact if declined]: power users who are quick with their mice often see scrollbars in the main menupanel (and have the panel be too small). This could potentially affect the new control center usages as well
[Describe test coverage new/current, TreeHerder]: nope
[Risks and why]: very low-risk correctness fix to the transition listeners for popup animations, already independently verified
[String/UUID change made/needed]: nope
Attachment #8648704 -
Flags: approval-mozilla-beta?
Attachment #8648704 -
Flags: approval-mozilla-aurora?
status-firefox41:
--- → affected
status-firefox42:
--- → affected
Comment 22•10 years ago
|
||
Comment on attachment 8648704 [details]
MozReview Request: Bug 1088637 - check we get the right transition event, r?Enn
Given that the fix was verified, let's uplift to Aurora and Beta.
Attachment #8648704 -
Flags: approval-mozilla-beta?
Attachment #8648704 -
Flags: approval-mozilla-beta+
Attachment #8648704 -
Flags: approval-mozilla-aurora?
Attachment #8648704 -
Flags: approval-mozilla-aurora+
Comment 24•10 years ago
|
||
I did some quick verification today on Windows 7 x64, using Firefox 41 Beta 3, and I can still easily reproduce the issue. As far as I can tell the fix should clearly be in this build. Note that the fix seems to indeed work just fine on Nightly.
Gijs, do you know of any reason why this fix would not work in 41 Beta 3?
Flags: needinfo?(gijskruitbosch+bugs)
| Assignee | ||
Comment 25•10 years ago
|
||
(In reply to Florin Mezei, QA (:FlorinMezei) from comment #24)
> Created attachment 8650901 [details]
> 41b3_screenshot.png
>
> I did some quick verification today on Windows 7 x64, using Firefox 41 Beta
> 3, and I can still easily reproduce the issue. As far as I can tell the fix
> should clearly be in this build. Note that the fix seems to indeed work just
> fine on Nightly.
>
> Gijs, do you know of any reason why this fix would not work in 41 Beta 3?
Not offhand, no. Does it work on Aurora?
Flags: needinfo?(gijskruitbosch+bugs) → needinfo?(florin.mezei)
| Reporter | ||
Comment 26•10 years ago
|
||
I checked source files[1] of the 40.0b3.
And I confirmed that the 41.0b3 did not include the patch.
[1]https://ftp.mozilla.org/pub/mozilla.org/firefox/releases/41.0b3/source/firefox-41.0b3.source.tar.xz
(\firefox-41.0b3.source.tar.xz\firefox-41.0b3.source.tar\mozilla-beta\layout\xul\nsMenuPopupFrame.cpp)
| Reporter | ||
Comment 27•10 years ago
|
||
oops.
> I checked source files[1] of the 40.0b3
I checked source files[1] of the 41.0b3
| Assignee | ||
Comment 28•10 years ago
|
||
Ugh, I should have been more careful in checking pushlog.
It seems like http://hg.mozilla.org/releases/mozilla-beta/rev/e393da8ff81b was used for tagging 41b3 (note the two kids) which caused this cset to miss b3. Verification should be possible in 41b4.
(see also: http://hg.mozilla.org/releases/mozilla-beta/graph which makes this more clear.)
Flags: needinfo?(florin.mezei)
Comment 29•10 years ago
|
||
Thanks Gijs and Alice! We'll verify this on beta 4 or later then.
Flags: qe-verify+
Comment 30•10 years ago
|
||
I was able to reproduce this issue on Firefox 41 beta 3 (20150820142145) using Windows 7 64-bit.
Verified fixed on Firefox 41 Beta 4 (20150824144923), Firefox 43.0a1 (2015-08-25) and Firefox 42.0a2 (2015-08-25) under Windows 7 64-bit, Ubuntu 14.04 32-bit and Mac OS X 10.9.5.
Comment 31•8 years ago
|
||
Moving to Core:XUL per https://bugzilla.mozilla.org/show_bug.cgi?id=1455336
Component: XP Toolkit/Widgets: XUL → XUL
You need to log in
before you can comment on or make changes to this bug.
Description
•