Bug 1088637 - check we get the right transition event, r=Enn a=ritu

--HG--
extra : source : 2534ceef7946c4fb5c04601f87b8624c03e8de3b
extra : intermediate-source : b0b8104219f8c49184564a5e1d7151d60e910409